objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <label>Candidate Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>test for deployment for autoRabit</description>
        <label>Job Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <type>TextArea</type>
    </fields>
    <label>Application</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>